formulaire contact ok

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "symfony/yaml": "6.4.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.59"
+        "symfony/maker-bundle": "^1.59",
+        "symfony/stopwatch": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     },
     "config": {
         "allow-plugins": {
