--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,9 +39,12 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
-    - { path: ^/private, roles: IS_AUTHENTICATED_FULLY }
+  - { path: ^/admin-listecategorie, roles: IS_AUTHENTICATED_FULLY }
+  - { path: ^/admin, roles: ROLE_ADMIN }
+  # - { path: ^/profile, roles: ROLE_USER }
+  - { path: ^/private, roles: IS_AUTHENTICATED_FULLY }
+  - { path: ^/mod, roles: ROLE_MOD }
+
 
 when@test:
   security:
